Chenged Background color

--- a/index.html
+++ b/index.html
@@ -15,6 +15,97 @@
         <div class="navbar">
             <input type="checkbox" name="check-menu" id="check-menu">
             <div id="logo-top" class="logo">
+                <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+                <!-- Created with Inkscape (http://www.inkscape.org/) -->
+                <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#"
+                    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg"
+                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+                    xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="45mm" height="58mm"
+                    viewBox="0 0 45 58" version="1.1" id="svg8" inkscape:version="0.92.4 (5da689c313, 2019-01-14)"
+                    sodipodi:docname="logo.svg">
+                    <defs id="defs2">
+                        <linearGradient inkscape:collect="always" id="linearGradient902">
+                            <stop style="stop-color:#24787a;stop-opacity:1;" offset="0" id="stop898" />
+                            <stop style="stop-color:#24787a;stop-opacity:0;" offset="1" id="stop900" />
+                        </linearGradient>
+                        <inkscape:perspective sodipodi:type="inkscape:persp3d" inkscape:vp_x="0 : 36.999998 : 1"
+                            inkscape:vp_y="0 : 999.99992 : 0" inkscape:vp_z="105.00001 : 36.999998 : 1"
+                            inkscape:persp3d-origin="52.500001 : 24.666663 : 1" id="perspective815" />
+                        <radialGradient inkscape:collect="always" xlink:href="#linearGradient902" id="radialGradient896"
+                            cx="148.06442" cy="119.00124" fx="148.06442" fy="119.00124" r="38.17321"
+                            gradientTransform="matrix(-0.31462935,-4.5651984,2.6362886,-0.18169878,-2.3508139,931.30991)"
+                            gradientUnits="userSpaceOnUse" />
+                    </defs>
+                    <sodipodi:namedview id="base" pagecolor="#ffffff" bordercolor="#666666" borderopacity="1.0"
+                        inkscape:pageopacity="0.0" inkscape:pageshadow="2" inkscape:zoom="0.9899495"
+                        inkscape:cx="213.25684" inkscape:cy="130.16795" inkscape:document-units="mm"
+                        inkscape:current-layer="g872" showgrid="false" units="mm" inkscape:window-width="1366"
+                        inkscape:window-height="715" inkscape:window-x="-8" inkscape:window-y="-8"
+                        inkscape:window-maximized="1" showborder="false" />
+                    <metadata id="metadata5">
+                        <rdf:RDF>
+                            <cc:Work rdf:about="">
+                                <dc:format>image/svg+xml</dc:format>
+                                <dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+                                <dc:title></dc:title>
+                            </cc:Work>
+                        </rdf:RDF>
+                    </metadata>
+                    <g inkscape:label="Capa 1" inkscape:groupmode="layer" id="layer1" transform="translate(0,-239)">
+                        <g id="g872" transform="translate(4.543582)">
+                            <g id="g916" transform="translate(-29.132378,9.3544334)">
+                                <path inkscape:connector-curvature="0"
+                                    d="m 196.39648,33.671875 -79.0664,45.472656 0.24023,43.615239 43.83985,-25.931645 v 74.917965 l -43.44141,25.08203 v 43.85157 l 78.42773,-45.28125 z"
+                                    style="fill:none;stroke:#000000;stroke-width:0.99999994px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                                    transform="matrix(0.26458333,0,0,0.26458333,-4.543582,223)" id="path837" />
+                                <path inkscape:connector-curvature="0"
+                                    d="m 196.39648,33.671875 0.2168,161.726565 78.27344,45.17578 -0.0586,-43.85156 -43.35742,-25.02344 -0.88672,-109.255861 z"
+                                    style="fill:none;stroke:#000000;stroke-width:0.99862552px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                                    transform="matrix(0.26458333,0,0,0.26458333,-4.543582,223)" id="path839" />
+                                <path sodipodi:nodetypes="cc"
+                                    style="fill:none;stroke:#000000;stroke-width:0.26458332px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                                    d="M 26.668812,286.67994 H 38.887717" id="path851"
+                                    inkscape:connector-curvature="0" />
+                                <path
+                                    style="fill:none;stroke:#000000;stroke-width:0.26458332px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                                    d="m 26.56341,255.48003 h 9.816798 l 1.668785,-0.96347" id="path863"
+                                    inkscape:connector-curvature="0" />
+                                <path sodipodi:nodetypes="cc"
+                                    style="fill:none;stroke:#000000;stroke-width:0.26458332px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                                    d="M 55.967722,286.65218 H 68.186627" id="path851-6"
+                                    inkscape:connector-curvature="0" />
+                                <path inkscape:connector-curvature="0" id="path909"
+                                    d="m 38.895804,286.66593 8.524759,-4.92177"
+                                    style="fill:none;stroke:#000000;stroke-width:0.29693404px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" />
+                                <path inkscape:connector-curvature="0" id="path913"
+                                    d="m 55.967721,286.65218 -8.502108,-4.9087"
+                                    style="fill:none;stroke:#000000;stroke-width:0.26458332px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" />
+                                <path transform="matrix(0.26458333,0,0,0.26458333,-4.543582,223)"
+                                    inkscape:connector-curvature="0" id="path829"
+                                    d="m 235.86382,217.22335 c -20.76823,-12.01336 -37.98573,-22.06777 -38.2611,-22.34315 -0.32771,-0.3277 -0.45652,-27.95606 -0.37284,-79.96978 l 0.12784,-79.469104 16.20535,13.660468 16.20535,13.660469 0.3359,31.194728 c 0.18474,17.157099 0.3359,39.759149 0.3359,50.226779 0,10.46762 0.14605,21.08964 0.32456,23.60449 l 0.32456,4.57244 21.38283,12.29893 21.38283,12.29894 0.0109,8.88332 c 0.006,4.88582 0.16088,14.37494 0.34421,21.08693 0.19788,7.24462 0.14656,12.19009 -0.12627,12.17032 -0.25277,-0.0183 -17.45178,-9.86242 -38.22001,-21.87578 z"
+                                    style="opacity:0.65399996;fill:#00ffff;fill-opacity:1;stroke:none;stroke-width:2.86342454;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0.65829145" />
+                                <path transform="matrix(0.26458333,0,0,0.26458333,-4.543582,223)"
+                                    inkscape:connector-curvature="0" id="path831"
+                                    d="m 118.93905,218.14726 0.13185,-21.07308 21.57939,-12.43218 21.5794,-12.43218 0.0126,-38.25953 c 0.007,-21.04274 -0.0807,-38.259524 -0.19477,-38.259524 -0.11407,0 -9.94412,5.765924 -21.84455,12.813154 l -21.63716,12.81315 -0.13195,-20.74438 c -0.10296,-16.18622 0.008,-20.872326 0.50507,-21.326685 0.35037,-0.32027 17.56972,-10.303295 38.26522,-22.184501 20.6955,-11.881205 37.79864,-21.700587 38.00699,-21.820848 0.20834,-0.120262 0.3788,35.776636 0.3788,79.770884 v 79.98954 l -37.97365,21.93941 c -20.88552,12.06667 -38.16164,22.016 -38.39138,22.10961 -0.22974,0.0936 -0.35838,-9.31266 -0.28587,-20.90284 z"
+                                    style="opacity:0.65399996;fill:#00ffff;fill-opacity:1;stroke:none;stroke-width:2.86342454;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0.65829145" />
+                                <path transform="matrix(0.26458333,0,0,0.26458333,-4.543582,223)"
+                                    inkscape:connector-curvature="0" id="path868"
+                                    d="m 121.59628,239.52991 c 0.55558,-0.32007 17.6602,-10.1853 38.01025,-21.92273 l 37.00009,-21.34078 22.85145,13.25522 c 12.56829,7.29036 29.36433,16.99204 37.32454,21.55928 l 14.4731,8.30406 -21.32981,0.13163 -21.3298,0.13162 -15.72684,-9.09672 c -8.64976,-5.00321 -16.04364,-9.09673 -16.43083,-9.09673 -0.38719,0 -7.97521,4.20476 -16.86226,9.34391 l -16.15827,9.34391 -21.41588,-0.0154 c -16.4172,-0.0118 -21.18011,-0.15119 -20.40574,-0.59731 z"
+                                    style="opacity:0.65399996;fill:#24607a;fill-opacity:0.98994978;stroke:none;stroke-width:2.86342454;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0.98823529" />
+                                <path transform="matrix(0.26458333,0,0,0.26458333,-4.543582,223)"
+                                    inkscape:connector-curvature="0" id="path870"
+                                    d="m 120.88076,121.75229 c 0.16868,-0.16227 28.8797,-17.19575 37.71236,-22.373738 l 2.14657,-1.258391 v 10.125319 10.12533 l -3.05752,1.79196 -3.05751,1.79196 h -16.97718 c -9.33744,0 -16.88247,-0.0911 -16.76672,-0.20244 z"
+                                    style="opacity:0.65399996;fill:#24607a;fill-opacity:0.98994978;stroke:none;stroke-width:2.86342454;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0.98823529" />
+                                <path transform="matrix(0.26458333,0,0,0.26458333,-4.543582,223)"
+                                    inkscape:connector-curvature="0" id="path872"
+                                    d="m 264.7854,233.74405 c -49.49614,-28.60058 -66.10496,-38.2912 -66.77364,-38.95989 -0.22256,-0.22255 -0.34713,-36.03001 -0.27681,-79.57211 l 0.12785,-79.16746 15.65736,13.192266 15.65737,13.192267 0.31028,4.63526 c 0.17065,2.549394 0.48298,26.340913 0.69406,52.870047 0.21108,26.52913 0.52603,49.22606 0.69987,50.43763 l 0.31609,2.20284 21.2132,12.21202 21.21321,12.21201 0.28697,19.42525 c 0.27682,18.73769 0.20152,22.24205 -0.47638,22.16928 -0.17362,-0.0186 -4.06586,-2.20086 -8.64943,-4.84941 z"
+                                    style="opacity:0.65399996;fill:url(#radialGradient896);fill-opacity:1;stroke:none;stroke-width:2.86342454;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0.98823529" />
+                            </g>
+                        </g>
+                    </g>
+                </svg>
+
                 <span class="txt">JORGE L.</span>
             </div>
             <div class="nav__icon">
