Adding Weather app

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg"
                     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                     xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-                    xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="45mm" height="58mm"
+                    xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width="20px" height="20px"
                     viewBox="0 0 45 58" version="1.1" id="svg8" inkscape:version="0.92.4 (5da689c313, 2019-01-14)"
                     sodipodi:docname="logo.svg">
                     <defs id="defs2">
@@ -194,29 +194,30 @@
                 <div id="info-projects" class="title__info">Proyectos</div>
                 <div class="projects-descrip">
                     <div class="project__item">
+                        <div class="project__fill"><a href="https://github.com/jorgeluis279hch/FirstProject">Repositorio
+                                del proyecto</a>
+                        </div>
+                        <img class="project__img" src="./img/weatherApp.png" alt="Weather app" srcset="">
+                        <span>WeatherApp</span>
+                    </div>
+                    <div class="project__item">
                         <div class="project__fill"><a
                                 href="https://github.com/jorgeluis279hch/proyectorDeFotos">Repositorio del proyecto</a>
                         </div>
-                        <img class="project__img" src="./img/pr.png" alt="" srcset="">
+                        <img class="project__img" src="./img/pr.png" alt="Photo project" srcset="">
                         <span>Proyector de fotos</span>
                     </div>
-                    <div class="project__item">
-                        <div class="project__fill"><a
-                                href="https://github.com/jorgeluis279hch/CalculadoraBasica">Repositorio del proyecto</a>
-                        </div>
-                        <img class="project__img" src="./img/calc.png" alt="" srcset="">
-                        <span>Calculadora</span>
-                    </div>
+
                     <div class="project__item">
                         <div class="project__fill"><a href="https://github.com/jorgeluis279hch/todo-list">Repositorio
                                 del proyecto</a></div>
-                        <img class="project__img" src="./img/tasklist.png" alt="" srcset="">
+                        <img class="project__img" src="./img/tasklist.png" alt="Task list" srcset="">
                         <span>TODO List</span>
                     </div>
                     <div class="project__item">
                         <div class="project__fill"><a href="https://github.com/jorgeluis279hch/TicTacToe">Repositorio
                                 del proyecto</a></div>
-                        <img class="project__img" src="./img/ticTacToe.png" alt="" srcset="">
+                        <img class="project__img" src="./img/ticTacToe.png" alt="Tic tac toee!" srcset="">
                         <span>Tic Tac Toe</span>
                     </div>
                 </div>
